--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.orionlibs</groupId>
     <artifactId>orion-file-system</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <name>Orion File system</name>
     <description>Java library to handle files and directories</description>
     <url>https://github.com/orionlibs/orion-file-system</url>
@@ -229,8 +229,8 @@
     <dependencies>
         <dependency>
             <groupId>io.github.orionlibs</groupId>
-            <artifactId>orion-assert</artifactId>
-            <version>1.0.0</version>
+            <artifactId>orion-stream</artifactId>
+            <version>1.0.1</version>
         </dependency>
 
 
